src/components/Card/style.css
.container{
	/*composes: card-dimens from '../../shared/styles.css';*/
	margin-bottom: 4%;
	position: relative;
	/*material design card shadow effect*/
	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
	color: #fff;
	font-size: 1.2em;
	width: 400px;
	flex: 1;
}

.container:hover{
	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.imageContainer{
	height: 400px;
}

.container-leave{
	opacity: 1;
}

.container-leave .container-leave-active{
	opacity: 0.01;
   transition: opacity 500ms ease-in;
}

.author{
	font-weight: bold;
}
.author:hover{
	text-decoration: underline;
	cursor: pointer;
}

.bottomBar{
	justify-content: space-between;
	display: flex;
	flex-flow: row wrap;
	position: absolute;
	background-color: rgba(0,0,0,0.6);
	bottom: 0;
	padding-top: 4%;
	width: 100%;
}

.btnDelete{
	background: url('../../images/delete-32-white.png') no-repeat scroll 0 0 transparent;
	width: 32px;
	height: 32px;
	cursor: pointer;
	border: none;
	order:2;
	margin-right: 10%;
	padding-bottom: 20%;
	align-self: flex-end;
}
.bottomText{
	order: 1;
	font-size: 1.1em;
	margin-left: 10%;
	margin-bottom: 2%;
}


.btnDelete:hover{
	background: url('../../images/delete-32.png') no-repeat scroll 0 0 transparent;
}

